--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="desafio2.js">
+    <script src="desafioIMC.js">
 
     </script>
 </body>
